--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -7,7 +7,7 @@
     detail: I work at Kulmbacher Brauerei AG
     i18n: company_a_desc
   date:
-    detail: July 21995016
+    detail: from July 1995 until now
     i18n: company_a_date
   job:
     detail: Lead Software Architect
