--- a/_data/index/skills.yml
+++ b/_data/index/skills.yml
@@ -2,5 +2,5 @@
 
 label: Ability
 id : cs
-aspects: GitHub, Motivation, HTML5, ReactJS, Machine Learing, Python, Sleeping
-percentage: 100, 35, 65, 80, 70, 90, 50
+aspects: SQL, C#, ASP.NET Core, OLAP, Excel, Power Platform, Azure, Bierologie
+percentage: 100, 80, 65, 60, 95, 60, 50, 100
