--- a/_data/blog.yml
+++ b/_data/blog.yml
@@ -18,7 +18,7 @@
 - name: DSQLT
   href: /dsqlt/
   
-- name: Helpers
+- name: HELPERS
   href: /helpers/
 
 # Don't display donation page: change donation to off at file '_config.yml'
