--- a/_config.yml
+++ b/_config.yml
@@ -11,15 +11,15 @@ img_path: /Henni/static/assets/img/blog  # url should be '/homepage/static/asset
 
 # author -- index page "about me" section
 author:  # change following line to your infomation.
-  name: GitHub  # Be used at blog posts' author.
-  first_name: Hub  # Be used at index page about me section.
-  last_name: Git  # Be used at index page about me section.
-  avatar: /static/assets/img/landing/avatar.jpg  # upload your avatar at directory and edit it.
-  github_username:   # Leave blank if you don't have now
-  linkedin_id:  # Leave blank if you don't have now
+  name: Henni  # Be used at blog posts' author.
+  first_name: Henrik  # Be used at index page about me section.
+  last_name: Bauer  # Be used at index page about me section.
+  avatar: /static/assets/img/landing/Henni_Karikatur.jpg  # upload your avatar at directory and edit it.
+  github_username: HenrikBauer   # Leave blank if you don't have now
+  linkedin_id: hennibauer  # Leave blank if you don't have now
   facebook_username:   # Leave blank if you don't have now
-  twitter_username:   # Leave blank if you don't have now
-  email:   # Leave blank if you don't have now
+  twitter_username: HenniBauer   # Leave blank if you don't have now
+  email: henrik.bauer@gmail.com  # Leave blank if you don't have now
   cv:   # An online CV can be printed as PDF, leave blank if you don't have now
   # skill icons are on avatar's left and right side. Reference urls are http://fontawesome.io/ and http://fizzed.com/oss/font-mfizz
   skill_icon1:
@@ -28,7 +28,7 @@ author:  # change following line to your infomation.
   skill_icon2:
     - name: fa-linux
     - name: icon-apache
-  desc: Introduce myself will be here.  # Describe yourself.
+  desc: Please allow me to introduce myself, I'm a man of wealth and taste.  # Describe yourself.
 
 # comment
 disqus:  # if you wanna comment feature, go to https://disqus.com/ to get your configuration; if not, comment following two lines.
